Also pass memory thing to surefire, even if we don't fork for separate tests