@@ -58,6 +58,7 @@
         <configuration>
           <forkCount>0</forkCount>
           <parallel>none</parallel>
+          <argLine>-Xms512m -Xmx1G -XX:MaxPermSize=256m</argLine>
           <includes>
             <include>**/*.java</include>
           </includes>
